WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101941
Fix memory leak in createSurfaceForBackingStore()
https://bugs.webkit.org/show_bug.cgi?id=101941
Summary
Fix memory leak in createSurfaceForBackingStore()
Chris Dumez
Reported
2012-11-12 08:38:18 PST
We have a memory leak in createSurfaceForBackingStore(), the RefPtr<cairo_surface_t> is not released when returned.
Attachments
Patch
(1.36 KB, patch)
2012-11-12 10:54 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-11-12 10:54:20 PST
Created
attachment 173672
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-12 12:38:25 PST
Comment on
attachment 173672
[details]
Patch Clearing flags on attachment: 173672 Committed
r134283
: <
http://trac.webkit.org/changeset/134283
>
WebKit Review Bot
Comment 3
2012-11-12 12:38:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug