Fix memory leak in createSurfaceForBackingStore() https://bugs.webkit.org/show_bug.cgi?id=101941

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-11-12
Reviewed by Kenneth Rohde Christiansen.

Fix memory leak in createSurfaceForBackingStore(),
the RefPtr<cairo_surface_t> should be released
when returned since we pass ownership to the
caller.

No new tests, no behavior change for layout tests.

* platform/graphics/efl/CairoUtilitiesEfl.cpp:
(WebCore::createSurfaceForBackingStore):

Canonical link: https://commits.webkit.org/120036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134283 268f45cc-cd09-0410-ab3c-d52691b4dbfc